# voilab

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.isaacsim  Makefile  README.md  UMI_README.md  docker-compose.yaml  entrypoint.sh  launch_isaacsim_gui.py  pipeline_config.yaml  pyproject.toml
AGENT_PLANS/: isaac-sim-action-graph-component.md  isaac-sim-cli-launcher-implementation.md  isaac-sim-object-spawning-research.md  isaac-sim-v5.1.0-python-api-research.md
assets/CADs/: bridge.usd  bridge.usdc  cup_blue.usd  cup_finalized.usd  cup_pink.usd  cup_xform.usd  cylinder.usd  cylinder.usdc  fork.usd  fork_final.usd  knife.usd  knife_final.usd  rectangle.usd  rectangle_prism.usdc  spoon.usd  storage_box.usd  triangle.usd  triangle_prism.usd
assets/Collected_franka-umi-scene/: franka-umi-scene.usd
docs/: data_collection_isaacsim.md
experiments/: calibration.py  charuco_board_calibration.ipynb  exps.ipynb  fisheye_converter.ipynb  plot_urdf.ipynb
nbs/: aruco_detection_viewer.ipynb  dataset_visualizer.ipynb  replay_buffer_viewer.ipynb  slam_viewer.ipynb
scripts/: action_graph.py  generate_data.py  launch_isaacsim_workspace.py  motion_plan.py  object_loader.py  pose_utils.py  test_launch_isaacsim_workspace.py  umi_replay.py  utils.py
src/voilab/: __init__.py  (+1 more)
umi_pipeline_configs/: CONFIG_PROPAGATION_GUIDE.md  enhanced_pipeline_config.yaml  gopro13_fisheye_2-7k_pipeline_config.yaml  gopro13_normal_pipeline_config.yaml  gopro13_pipeline_config.yaml  gopro13_wide_angle_pipeline_config.yaml  pipeline_config.yaml  test_pipeline_config.yaml
(+18 files in other folders)
