[project]
name = "voilab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "author31", email = "wi072815.tw@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "imagecodecs>=2025.8.2",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "voila>=0.5.10",
    "zarr>=3.1.1",
]

[project.scripts]
voilab = "voilab.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
